--- a/src/main/resources/templates/categories.html
+++ b/src/main/resources/templates/categories.html
@@ -5,20 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/style.css">
-    <link rel="stylesheet" href="CSS/layout.css">
+    <link rel="stylesheet" href="/src/main/resources/static/CSS/layout.css">
+    <link rel="stylesheet" href="/src/main/resources/static/CSS/style.css">
     <title>Destination Reviews</title>
 
 </head>
 
 <body>
     <div class="container">
-        <header class = "header">
+        <header>
             <h1>Travel Destinations Reviews</h1>
             <nav>
                 <ul>
-                    <li>Categories</li>
-                    <li>Hashtags</li>
+                    <li><a href="categories.html">Categories</a> </li>
+                    <li><a href="hashtags.html">Hashtags</a> </li>
                 </ul>
             </nav>
     </div>
@@ -27,21 +27,47 @@
         <section class="categories">
             <ul>
                 
-                <li>Beaches</li>
-                <li>Mountains</li>
-                <li>Cities</li>
-                <li>International</li>
-                <li>Cruise</li>
+                <div>
+                <li>
+                    <img id ='beach' src="/src/main/resources/static/Images/sean-oulashin-KMn4VEeEPR8-unsplash.jpg" alt="Beach">
+                    <h2>Beaches</h2>
+                </li>
+            </div>
+            <div>
+                <li>
+                    <img id ='mountains' src="/src/main/resources/static/Images/kalen-emsley-Bkci_8qcdvQ-unsplash.jpg" alt="Mountains">
+                    <h2>Mountains</h2>
+                </li>
+            </div>
+            <div>
+                <li>
+                    <img id ='city' src="/src/main/resources/static/Images/pedro-lastra-Nyvq2juw4_o-unsplash.jpg" alt="Chicago Skyline">
+                    <h2>Cities</h2>
+                </li>
+            </div>
+            <div>
+                <li>
+                    <img id ='international' src="/src/main/resources/static/Images/alexander-kagan-t9Td0zfDTwI-unsplash.jpg" alt="Paris Skyline">
+                    <h2>International</h2>
+                </li>
+            </div>
+            <div>
+                <li>
+                    <img id ='cruise' src="/src/main/resources/static/Images/josiah-weiss-tthKs4A7XMY-unsplash.jpg" alt="Cruise Ship">
+                    <h2>Cruise</h2>
+                </li>
+            </div>
+               
             </ul>
         </section>
     </main>
 <footer>
-    <article>
-        2022
+    <article class="copyright">
+        <p>©2022</p>
+        
     </article>
-    <article>
-        Travel Destination Reviews
-    </article>
+    <p>Travel Destination Reviews</p>
+   
 </footer>
 </body>
 
