with pictures test

--- a/src/main/resources/templates/categories.html
+++ b/src/main/resources/templates/categories.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/style.css">
-    <link rel="stylesheet" href="CSS/layout.css">
+    <link rel="stylesheet" href="/src/main/resources/static/CSS/CSS/style.css">
+    <link rel="stylesheet" href="/src/main/resources/static/CSS/CSS/layout.css">
     <title>Destination Reviews</title>
 
 </head>
 
 <body>
     <div class="container">
-        <header class = "header">
+        <header class="header">
             <h1>Travel Destinations Reviews</h1>
             <nav>
                 <ul>
@@ -26,10 +26,11 @@
     <main>
         <section class="categories">
             <ul>
-                
-                <li>Beaches
-                    <img src="" alt="">
-                </li>
+                <div id="beaches">
+                    <li>Beaches
+                        <img id="beachpic" src="/src/main/resources/static/images/beach.jpeg" alt="">
+                    </li>
+                </div>
                 <li>Mountains</li>
                 <li>Cities</li>
                 <li>International</li>
@@ -37,14 +38,14 @@
             </ul>
         </section>
     </main>
-<footer>
-    <article>
-        2022
-    </article>
-    <article>
-        Travel Destination Reviews
-    </article>
-</footer>
+    <footer>
+        <article>
+            2022
+        </article>
+        <article>
+            Travel Destination Reviews
+        </article>
+    </footer>
 </body>
 
 </html>
