--- a/src/main/resources/templates/categories.html
+++ b/src/main/resources/templates/categories.html
@@ -25,7 +25,7 @@
     </header>
     <main>
         <section class="categories">
-            <ul>
+            <ul class =  "main-catagories">
                 
                 <div>
                 <li>
