--- a/src/main/resources/templates/category.html
+++ b/src/main/resources/templates/category.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="CSS/style.css">
-    <link rel="stylesheet" href="CSS/layout.css">
+    <link rel="stylesheet" href="/src/main/resources/static/CSS/style.css">
+    <link rel="stylesheet" href="/src/main/resources/static/CSS/layout.css">
     <title>Destination Reviews</title>
 
 </head>
@@ -25,20 +25,20 @@
         </header>
     </div>
     <main>
-        <h2>Category</h2>
+        <h2 class="sub-main">Category</h2>
         <section>
-            <ul>
+            <ul class="sub-main2">
                 <li>Destination</li>
             </ul>
         </section>
     </main>
     <footer>
-        <article>
-            2022
+        <article class="copyright">
+            <p>©2022</p>
+            
         </article>
-        <article>
-            Travel Destination Reviews
-        </article>
+        <p>Travel Destination Reviews</p>
+       
     </footer>
 
 </body>
