--- a/src/main/resources/templates/review.html
+++ b/src/main/resources/templates/review.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/style.css">
-    <link rel="stylesheet" href="CSS/layout.css">
+    <link rel="stylesheet" href="/src/main/resources/static/CSS/style.css">
+    <link rel="stylesheet" href="/src/main/resources/static/CSS/layout.css">
     <title>Destination Reviews</title>
 
 </head>
@@ -24,8 +24,8 @@
     </div>
     </header>
     <main>
-        <section>
-            <h1>Name of Destination</h1>
+        <section class ="sub-main">
+            <h1 id="name-of-destination">Name of Destination</h1>
             <a href="#">Picture of Destination</a>
             <p>Description</p>
             <div>
@@ -48,12 +48,13 @@
         </section>
     </main>
     <footer>
-        <article>
-            2022
+        <article class="copyright">
+            <p>©2022</p>
+            
         </article>
-        <article>
-            Travel Destination Reviews
-        </article>
+        <p>Travel Destination Reviews</p>
+       
+    </footer>
     </footer>
 </body>
 
