--- a/src/main/resources/static/CSS/layout.css
+++ b/src/main/resources/static/CSS/layout.css
@@ -2,7 +2,9 @@
     display:flex;
     flex-direction: row;
     justify-content: space-around;
-   
+    
+    
+    
 }
 h1{
     font-size: 4em;
@@ -18,12 +20,15 @@ nav ul{
     justify-content: space-around;
     color: white;
     font-size: 1.5em;
+    
+    
 }
-ul{
+.main-catagories{
     display: grid;
     grid-template-columns: repeat(5,1fr);
     grid-template-rows: 1fr, .3fr, 1fr, .3fr;   
     text-align: center;
+    padding-left: 0px;
 }
 footer{
     display: flex;
@@ -32,4 +37,23 @@ footer{
 }
 .copyright{
     margin-right: 10px;
+}
+.sub-main{
+    text-align: center;
+   
+    
+}
+.sub-main2{
+   text-align: center;
+   padding: 0px;
+   margin-bottom: 40px;
+    }
+#name-of-destination{
+   justify-content: center;
+}
+.comment-form{
+    margin-bottom : 50px;
+}
+#all-reviews-listed{
+    padding: 0px;
 }
