--- a/src/main/resources/templates/hashtag.html
+++ b/src/main/resources/templates/hashtag.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="CSS/style.css">
-    <link rel="stylesheet" href="CSS/layout.css">
+    <link rel="stylesheet" href="/src/main/resources/static/CSS/style.css">
+    <link rel="stylesheet" href="/src/main/resources/static/CSS/layout.css">
     <title>Destination Reviews</title>
 
 </head>
@@ -25,9 +25,9 @@
         </header>
     </div>
     <main>
-        <h2>Hashtag</h2>
+        <h2 class="sub-main">Hashtag</h2>
         <section>
-            <ul>
+            <ul class="sub-main2">
                 <li>Destination</li>
             </ul>
         </section>
