--- a/src/main/resources/templates/hashtags.html
+++ b/src/main/resources/templates/hashtags.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="CSS/style.css">
-    <link rel="stylesheet" href="CSS/layout.css">
+    <link rel="stylesheet" href="/src/main/resources/static/CSS/style.css">
+    <link rel="stylesheet" href="/src/main/resources/static/CSS/layout.css">
     <title>Destination Reviews</title>
 
 </head>
@@ -27,7 +27,7 @@
 
 
     <body>
-        <main>
+        <main class="sub-main">
             <section>
                 <ul>
                     <li>Family Friendly</li>
@@ -44,12 +44,13 @@
             </section>
         </main>
         <footer>
-            <article>
-                2022
+            <article class="copyright">
+                <p>©2022</p>
+                
             </article>
-            <article>
-                Travel Destination Reviews
-            </article>
+            <p>Travel Destination Reviews</p>
+           
+        </footer>
         </footer>
     </body>
 
