--- a/src/main/resources/templates/category.html
+++ b/src/main/resources/templates/category.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    
     <link rel="stylesheet" href="/src/main/resources/static/CSS/style.css">
     <link rel="stylesheet" href="/src/main/resources/static/CSS/layout.css">
     <title>Destination Reviews</title>
@@ -18,8 +18,8 @@
             <h1>Travel Destinations Reviews</h1>
             <nav>
                 <ul>
-                    <li>Categories</li>
-                    <li>Hashtags</li>
+                    <li><a href="categories.html">Categories</a> </li>
+                    <li><a href="hashtags.html">Hashtags</a> </li>
                 </ul>
             </nav>
         </header>
