--- a/src/main/resources/templates/review.html
+++ b/src/main/resources/templates/review.html
@@ -17,8 +17,8 @@
             <h1>Travel Destinations Reviews</h1>
             <nav>
                 <ul>
-                    <li>Categories</li>
-                    <li>Hashtags</li>
+                    <li><a href="categories.html">Categories</a> </li>
+                    <li><a href="hashtags.html">Hashtags</a> </li>
                 </ul>
             </nav>
     </div>
