--- a/src/main/resources/static/CSS/layout.css
+++ b/src/main/resources/static/CSS/layout.css
@@ -1,3 +1,9 @@
+
+body{
+    position: relative;
+    min-height: 100vh;
+
+}
 .container{
     display:flex;
     flex-direction: row;
@@ -29,12 +35,16 @@ nav ul{
     grid-template-rows: 1fr, .3fr, 1fr, .3fr;   
     text-align: center;
     padding-left: 0px;
+    padding-bottom: 2.5rem;
 }
 footer{
     display: flex;
     justify-content: center;
    background-color: lightblue; 
-   
+   position: absolute;
+   bottom: 0;
+   width: 100%;
+   height: 2.5rem;
 }
 .copyright{
     margin-right: 10px;
@@ -58,3 +68,4 @@ footer{
 #all-reviews-listed{
     padding: 0px;
 }
+
