--- a/src/main/resources/templates/categories.html
+++ b/src/main/resources/templates/categories.html
@@ -25,51 +25,58 @@
     </header>
     <main>
         <section class="categories">
-            <ul class =  "main-catagories">
-                
+            <ul class="main-catagories">
+
                 <div>
-                <li>
-                    <img id ='beach' src="/src/main/resources/static/Images/sean-oulashin-KMn4VEeEPR8-unsplash.jpg" alt="Beach">
-                    <h2>Beaches</h2>
-                </li>
-            </div>
-            <div>
-                <li>
-                    <img id ='mountains' src="/src/main/resources/static/Images/kalen-emsley-Bkci_8qcdvQ-unsplash.jpg" alt="Mountains">
-                    <h2>Mountains</h2>
-                </li>
-            </div>
-            <div>
-                <li>
-                    <img id ='city' src="/src/main/resources/static/Images/pedro-lastra-Nyvq2juw4_o-unsplash.jpg" alt="Chicago Skyline">
-                    <h2>Cities</h2>
-                </li>
-            </div>
-            <div>
-                <li>
-                    <img id ='international' src="/src/main/resources/static/Images/alexander-kagan-t9Td0zfDTwI-unsplash.jpg" alt="Paris Skyline">
-                    <h2>International</h2>
-                </li>
-            </div>
-            <div>
-                <li>
-                    <img id ='cruise' src="/src/main/resources/static/Images/josiah-weiss-tthKs4A7XMY-unsplash.jpg" alt="Cruise Ship">
-                    <h2>Cruise</h2>
-                </li>
-            </div>
-               
-               
+                    <li>
+                        <img id='beach' src="/src/main/resources/static/Images/sean-oulashin-KMn4VEeEPR8-unsplash.jpg"
+                            alt="Beach">
+                        <h2>Beaches</h2>
+                    </li>
+                </div>
+                <div>
+                    <li>
+                        <img id='mountains'
+                            src="/src/main/resources/static/Images/kalen-emsley-Bkci_8qcdvQ-unsplash.jpg"
+                            alt="Mountains">
+                        <h2>Mountains</h2>
+                    </li>
+                </div>
+                <div>
+                    <li>
+                        <img id='city' src="/src/main/resources/static/Images/pedro-lastra-Nyvq2juw4_o-unsplash.jpg"
+                            alt="Chicago Skyline">
+                        <h2>Cities</h2>
+                    </li>
+                </div>
+                <div>
+                    <li>
+                        <img id='international'
+                            src="/src/main/resources/static/Images/alexander-kagan-t9Td0zfDTwI-unsplash.jpg"
+                            alt="Paris Skyline">
+                        <h2>International</h2>
+                    </li>
+                </div>
+                <div>
+                    <li>
+                        <img id='cruise' src="/src/main/resources/static/Images/josiah-weiss-tthKs4A7XMY-unsplash.jpg"
+                            alt="Cruise Ship">
+                        <h2>Cruise</h2>
+                    </li>
+                </div>
+
+
             </ul>
         </section>
     </main>
-<footer>
-    <article class="copyright">
-        <p>©2022</p>
-        
-    </article>
-    <p>Travel Destination Reviews</p>
-   
-</footer>
+    <footer>
+        <article class="copyright">
+            <p>©2022</p>
+
+        </article>
+        <p>Travel Destination Reviews</p>
+
+    </footer>
 </body>
 
 </html>
