--- a/src/main/resources/templates/review.html
+++ b/src/main/resources/templates/review.html
@@ -21,6 +21,7 @@
                     <li><a href="hashtags.html">Hashtags</a> </li>
                 </ul>
             </nav>
+        </header>
     </div>
     </header>
     <main>
