--- a/src/main/resources/templates/hashtag.html
+++ b/src/main/resources/templates/hashtag.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="UTF-8">
@@ -8,21 +9,15 @@
     
     <link rel="stylesheet" href="/src/main/resources/static/CSS/style.css">
     <link rel="stylesheet" href="/src/main/resources/static/CSS/layout.css">
+    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="/CSS/layout.css">
     <title>Destination Reviews</title>
 
 </head>
 
 <body>
     <div class="container">
-        <header class="header">
-            <h1>Travel Destinations Reviews</h1>
-            <nav>
-                <ul>
-                    <li><a href="categories.html">Categories</a> </li>
-                    <li><a href="hashtags.html">Hashtags</a> </li>
-                </ul>
-            </nav>
-        </header>
+        <div th:replace="fragments.html :: nav"></div>
     </div>
     <main>
         <h2 class="sub-main">Hashtag</h2>
@@ -32,14 +27,7 @@
             </ul>
         </section>
     </main>
-    <footer>
-        <article>
-            2022
-        </article>
-        <article>
-            Travel Destination Reviews
-        </article>
-    </footer>
+    <div th:replace="fragments.html :: footer"></div>
 
 </body>
 
