--- a/src/main/resources/templates/hashtags.html
+++ b/src/main/resources/templates/hashtags.html
@@ -1,28 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    
-    <link rel="stylesheet" href="/src/main/resources/static/CSS/style.css">
-    <link rel="stylesheet" href="/src/main/resources/static/CSS/layout.css">
+    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="/CSS/layout.css">
     <title>Destination Reviews</title>
 
 </head>
 
 <body>
     <div class="container">
-        <header class="header">
-            <h1>Travel Destinations Reviews</h1>
-            <nav>
-                <ul>
-                    <li><a href="categories.html">Categories</a> </li>
-                    <li><a href="hashtags.html">Hashtags</a> </li>
-                </ul>
-            </nav>
-        </header>
+        <div th:replace="fragments.html :: nav"></div>
     </div>
 
 
@@ -30,28 +23,14 @@
         <main class="sub-main">
             <section>
                 <ul>
-                    <li>Family Friendly</li>
-                    <li>Breathtaking</li>
-                    <li>Good Food</li>
-                    <li>All Inclusive</li>
-                    <li>Night Life</li>
-                    <li>Amazing</li>
-                    <li>Relaxing</li>
-                    <li>Adventurous</li>
-                    <li>Transportation</li>
-                    <li>Language</li>
+                    <div th:each="hashtag:${hashtags}">
+                        <a th:href="'/hashtags/' + ${hashtag}"><li th:text=${hashtag.hashtag}>FamilyFriendly
+                        </li></a>
+                    </div>
                 </ul>
             </section>
         </main>
-        <footer>
-            <article class="copyright">
-                <p>©2022</p>
-                
-            </article>
-            <p>Travel Destination Reviews</p>
-           
-        </footer>
-        </footer>
+        <div th:replace="fragments.html :: footer"></div>
     </body>
 
 </html>
