--- a/src/main/resources/static/CSS/layout.css
+++ b/src/main/resources/static/CSS/layout.css
@@ -1,11 +1,71 @@
-*{
-    padding: 0;
-    margin: 0;
+
+body{
+    position: relative;
+    min-height: 100vh;
+
+}
+.container{
+    display:flex;
+    flex-direction: row;
+    justify-content: space-around;
+    
+    
     
 }
-#beaches{
-    background-color: ;
+h1{
+    font-size: 4em;
+    display: flex;
 }
-img{
-    height = 50px;
+a{
+    color: black;
+    text-decoration: none;
+}
+nav ul {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+
+}
+nav ul li a{
+    color: white;
+    font-size: 1.5em;
+    }
+.main-categories{
+    display: grid;
+    grid-template-columns: repeat(5,1fr);
+    grid-template-rows: 1fr, .3fr, 1fr, .3fr;
+    text-align: center;
+    padding-left: 0px;
+    padding-bottom: 2.5rem;
+}
+footer{
+    display: flex;
+    justify-content: center;
+   background-color: lightblue; 
+   position: absolute;
+   bottom: 0;
+   width: 100%;
+   height: 2.5rem;
+}
+.copyright{
+    margin-right: 10px;
+}
+.sub-main{
+    text-align: center;
+   
+    
+}
+.sub-main2{
+   text-align: center;
+   padding: 0px;
+   margin-bottom: 40px;
+    }
+#name-of-destination{
+   justify-content: center;
+}
+.comment-form{
+    margin-bottom : 50px;
+}
+#all-reviews-listed{
+    padding: 0px;
 }
