--- a/src/main/resources/static/CSS/style.css
+++ b/src/main/resources/static/CSS/style.css
@@ -3,34 +3,22 @@
     
 }
 .container{
-    background-image:url(/src/main/resources/static/images/annie-spratt-qyAka7W5uMY-unsplash\ \(2\).jpg);
+    background-image:url(/images/annie-spratt-qyAka7W5uMY-unsplash\ \(2\).jpg);
     background-size: cover;
     color: lightblue;
     text-shadow: 2px 2px 4px black;
 }
-#beach{
+.category{
   
     border-radius: 10rem;
     height: 10rem;
     width: 10rem;
 }
-#mountains{
-    border-radius: 10rem;
-    height: 10rem;
-    width: 10rem;
+.sub-main{
+color:black;
+font-size: 2em;
 }
-#city{
-    border-radius: 10rem;
-    height: 10rem;
-    width: 10rem;
-}
-#international{
-    border-radius: 10rem;
-    height: 10rem;
-    width: 10rem;
-}
-#cruise{
-    border-radius: 10rem;
-    height: 10rem;
-    width: 10rem;
+.sub-main li:hover{
+    color:lightblue;
+    
 }
