--- a/src/main/resources/templates/category.html
+++ b/src/main/resources/templates/category.html
@@ -1,45 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <link rel="stylesheet" href="/src/main/resources/static/CSS/style.css">
-    <link rel="stylesheet" href="/src/main/resources/static/CSS/layout.css">
+    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="/CSS/layout.css">
     <title>Destination Reviews</title>
 
 </head>
 
 <body>
     <div class="container">
-        <header class="header">
-            <h1>Travel Destinations Reviews</h1>
-            <nav>
-                <ul>
-                    <li><a href="categories.html">Categories</a> </li>
-                    <li><a href="hashtags.html">Hashtags</a> </li>
-                </ul>
-            </nav>
-        </header>
+        <div th:replace="fragments.html :: nav"></div>
     </div>
     <main>
         <h2 class="sub-main">Category</h2>
         <section>
             <ul class="sub-main2">
-                <li>Destination</li>
+
+                <li><a th:href=""></a>Destination</li>
             </ul>
         </section>
     </main>
-    <footer>
-        <article class="copyright">
-            <p>©2022</p>
-            
-        </article>
-        <p>Travel Destination Reviews</p>
-       
-    </footer>
+    <div th:replace="fragments.html :: footer"></div>
 
 </body>
 
