--- a/src/main/resources/templates/review.html
+++ b/src/main/resources/templates/review.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,15 +13,7 @@
 
 <body>
     <div class="container">
-        <header class="header">
-            <h1>Travel Destinations Reviews</h1>
-            <nav>
-                <ul>
-                    <li><a href="categories.html">Categories</a> </li>
-                    <li><a href="hashtags.html">Hashtags</a> </li>
-                </ul>
-            </nav>
-        </header>
+        <div th:replace="fragments.html :: nav"></div>
     </div>
     </header>
     <main>
@@ -29,34 +21,26 @@
             <h1 id="name-of-destination">Name of Destination</h1>
             <a href="#">Picture of Destination</a>
             <p>Description</p>
-            <div>
-                <h3>rating
-                    <img src="#" alt="#">
-                </h3>
-            </div>
-            <div class="comment-form">
-                <form action="../add-comment/" method="POST">
+<!--            <div>-->
+<!--                <h3>rating-->
+<!--                    <img src="#" alt="#">-->
+<!--                </h3>-->
+<!--            </div>-->
+<!--            <div class="comment-form">-->
+<!--                <form action="../add-comment/" method="POST">-->
 
-                    <label for="comment">Enter a new comment:</label>
-                    <input type="text" id="comment" name="userComment" placeholder="Comment here...">
-                    <input type="hidden" value="Die Hard" name="title" />
+<!--                    <label for="comment">Enter a new comment:</label>-->
+<!--                    <input type="text" id="comment" name="userComment" placeholder="Comment here...">-->
+<!--                    <input type="hidden" value="Die Hard" name="title" />-->
 
-                    <br>
+<!--                    <br>-->
 
-                    <input type="submit" value="Submit">
-                </form>
-            </div>
+<!--                    <input type="submit" value="Submit">-->
+<!--                </form>-->
+<!--            </div>-->
         </section>
     </main>
-    <footer>
-        <article class="copyright">
-            <p>©2022</p>
-            
-        </article>
-        <p>Travel Destination Reviews</p>
-       
-    </footer>
-    </footer>
+    <div th:replace="fragments.html :: footer"></div>
 </body>
 
 </html>
