finished the populator with arrays

--- a/src/main/resources/templates/category.html
+++ b/src/main/resources/templates/category.html
@@ -17,15 +17,16 @@
     <div class="container">
         <div th:replace="fragments.html :: nav"></div>
     </div>
-    <main>
-        <h2 class="sub-main">Category</h2>
-        <section>
-            <ul class="sub-main2">
+<!--    <main>-->
+<!--        <h2 th:each="category:${categories}" th:text = ${category.categoryName}>Category</h2>-->
 
-                <li><a th:href=""></a>Destination</li>
-            </ul>
-        </section>
-    </main>
+<!--        <section>-->
+<!--            <ul class="sub-main2">-->
+
+<!--                <li><a th:href=""></a>Destination</li>-->
+<!--            </ul>-->
+<!--        </section>-->
+<!--    </main>-->
     <div th:replace="fragments.html :: footer"></div>
 
 </body>
