--- a/src/main/resources/templates/category.html
+++ b/src/main/resources/templates/category.html
@@ -6,7 +6,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
     <link rel="stylesheet" href="/CSS/style.css">
     <link rel="stylesheet" href="/CSS/layout.css">
     <title>Destination Reviews</title>
@@ -17,8 +16,26 @@
     <div class="container">
         <div th:replace="fragments.html :: nav"></div>
     </div>
-<!--    <main>-->
-<!--        <h2 th:each="category:${categories}" th:text = ${category.categoryName}>Category</h2>-->
+    <main>
+        <section class="category">
+            <div>
+                <h2  th:text = ${category.categoryName}>Category</h2>
+                <ul class="main-category">
+                    <li th:each="destination: ${category.destinations}">
+                        <div>
+                            
+                            <img th:src="${destination.imageURL}" th:alt="${destination.altText}">
+                            <h3 th:text="${destination.destinationName}"></h3>
+
+                        </div>
+                    </li>
+
+
+                </ul>
+            </div>
+
+        </section>
+
 
 <!--        <section>-->
 <!--            <ul class="sub-main2">-->
@@ -26,7 +43,7 @@
 <!--                <li><a th:href=""></a>Destination</li>-->
 <!--            </ul>-->
 <!--        </section>-->
-<!--    </main>-->
+    </main>
     <div th:replace="fragments.html :: footer"></div>
 
 </body>
