--- a/src/main/resources/static/CSS/layout.css
+++ b/src/main/resources/static/CSS/layout.css
@@ -80,11 +80,12 @@ font-size: 50px;
 .main-category {
     width: 100%;
     display: grid;
-    grid-template-columns: repeat(8,1fr);
+    grid-template-columns: repeat(3,1fr);
     grid-template-rows: 1fr, .3fr, 1fr, .3fr;
     text-align: center;
     padding-left: 0px;
     padding-bottom: 2.5rem;
+    row-gap: 40px;
 }
 
 .main-category img{
