--- a/src/main/resources/static/CSS/layout.css
+++ b/src/main/resources/static/CSS/layout.css
@@ -37,10 +37,10 @@ nav ul li a{
     padding-bottom: 2.5rem;
 }
 footer{
-    display: flex;
-    justify-content: center;
+   display: flex;
+   justify-content: center;
    background-color: lightblue; 
-   position: absolute;
+   position: fixed;
    bottom: 0;
    width: 100%;
    height: 2.5rem;
@@ -92,4 +92,33 @@ font-size: 50px;
     border-radius: 10rem;
     height: 10rem;
     width: 10rem;
+}
+.destination{
+    margin: auto;
+    width: 80%;
+    text-align: center;
+    font-size: 20px;
+    padding-bottom: 25px;
+}
+.destination h1{
+font-size: 40px;
+    justify-content: center;
+}
+.destination img{
+    width: 300px;
+    height: 300px;
+}
+.reviewForm{
+display: grid;
+grid-row-template: .3fr, 1fr. .3fr;
+
+
+gap: 15px;
+padding-bottom: 50px;
+
+}
+.average-rating li{
+display: flex;
+align-items: center;
+justify-content: center;
 }
