--- a/src/main/resources/static/CSS/layout.css
+++ b/src/main/resources/static/CSS/layout.css
@@ -109,16 +109,25 @@ font-size: 40px;
     height: 300px;
 }
 .reviewForm{
-display: grid;
-grid-row-template: .3fr, 1fr. .3fr;
-
-
-gap: 15px;
-padding-bottom: 50px;
-
+    position: center;
+    width: 350px;
+    height: 250px;
+    background: rgba(173, 216, 230, .4);
+    margin: auto;
+    margin-bottom: 50px;
 }
-.average-rating li{
-display: flex;
-align-items: center;
-justify-content: center;
+
+.postedReviews ul{
+    display: flex;
+    flex-direction: column;
+}
+
+.reviewList{
+    padding: 2em;
+    border: 2px lightblue solid;
+}
+.review-heading{
+    font-style: italic;
+
+
 }
