--- a/src/main/resources/templates/review.html
+++ b/src/main/resources/templates/review.html
@@ -20,7 +20,7 @@
 <main>
     <section class="destination">
         <h1 th:text=${destination.destinationName}>Name of Destination</h1>
-                <div>
+                <div class="destination-body">
                     <img th:src="${destination.imageURL}" th:alt="${destination.altText}">
                     <br>
                     <br>
