--- a/src/main/resources/templates/hashtags.html
+++ b/src/main/resources/templates/hashtags.html
@@ -20,7 +20,7 @@
 
 
 
-        <main class="sub-main">
+        <main class="sub-main-hashtag">
             <section>
                 <ul>
                     <div th:each="hashtag:${hashtags}">
