--- a/src/main/resources/static/CSS/layout.css
+++ b/src/main/resources/static/CSS/layout.css
@@ -76,8 +76,17 @@ footer{
 }
 .sub-main{
     text-align: center;
-   
-    
+}
+.sub-main-hashtag{
+    text-align: center;
+    height: 100%;
+    min-height: 100%;
+}
+.sub-main-hashtag ul {
+    text-align: center;
+    height: 100%;
+    min-height: 100%;
+    background-color: var(--light-background);
 }
 .sub-main2{
    text-align: center;
@@ -139,6 +148,11 @@ text-shadow: 2px 2px 4px black;
     min-height: 100%;
     background-color: var(--light-background);
 }
+.destination-body p{
+    width: 80%;
+    margin: auto;
+
+}
 .destination h1{
 font-size: 40px;
     justify-content: center;
@@ -170,6 +184,8 @@ text-shadow: 2px 2px 4px black;
 .reviewList{
     border-top: 2px var(--dark-background) solid;
     border-bottom: 2px var(--dark-background) solid;
+    padding-top: 5px;
+    padding-bottom: 5px;
 
 }
 .review-heading{
