added icon to title bar

--- a/src/main/resources/templates/hashtag.html
+++ b/src/main/resources/templates/hashtag.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="/src/main/resources/static/CSS/layout.css">
     <link rel="stylesheet" href="/CSS/style.css">
     <link rel="stylesheet" href="/CSS/layout.css">
+    <link rel="icon" href="/images/airplane.png">
     <title>Destination Reviews</title>
 
 </head>
