--- a/src/main/resources/templates/hashtags.html
+++ b/src/main/resources/templates/hashtags.html
@@ -9,6 +9,7 @@
    
     <link rel="stylesheet" href="/CSS/style.css">
     <link rel="stylesheet" href="/CSS/layout.css">
+    <link rel="icon" href="/images/airplane.png">
     <title>Destination Reviews</title>
 
 </head>
