--- a/src/main/resources/templates/review.html
+++ b/src/main/resources/templates/review.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/CSS/style.css">
     <link rel="stylesheet" href="/CSS/layout.css">
+    <link rel="icon" href="/images/airplane.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.1/css/fontawesome.min.css">
     <title>Destination Reviews</title>
 
